syntax = "proto3";

package users;

service UsersService {
  rpc Create (CreateUser) returns (User);
  rpc Update (UpdateUser) returns (User);
  rpc FindOne (Id) returns (User);
  rpc FindMany (Empty) returns (ManyUsers);
}

message Empty {}

message Id {
  int32 id = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  bool isSubscribed = 4;
}

message CreateUser {
    string name = 2;
    int32 age = 3;
    bool isSubscribed = 4;
}

message UpdateUser {
    int32 id = 1;
    optional string name = 2;
    optional int32 age = 3;
    optional bool isSubscribed = 4;
}

message ManyUsers {
  repeated User users = 1;
}
